[DEV-9578] fixed extra space above stand alone waffle charts and linear gauge (#1607)

--- a/packages/core/styles/v2/layout/_component.scss
+++ b/packages/core/styles/v2/layout/_component.scss
@@ -1,10 +1,8 @@
 .cove-component {
   border-radius: 3px;
-  // box-shadow: rgba(0, 0, 0, 0.2) 3px 6px 10px; // no box shadows
 }
 
 .cove-component__content {
-  padding-top: 1rem;
   border: solid 1px #ccc;
   border-top: none;
   border-radius: 0 0 3px 3px;
@@ -12,10 +10,6 @@
   &.no-borders {
     border: none !important;
   }
-
-  // .cdc-data-bite-inner-container:not(.component--has-title) .cove-component__content:not(.no-borders) {
-  //   border-top: 1px solid #ccc;
-  // }
 
   .cove-component__content:not(.component--hideBackgroundColor) {
     background: $lightestGray;
